--- a/tests/DecisionTech.ShoppingBasket.UnitTests/DecisionTech.ShoppingBasket.UnitTests.csproj
+++ b/tests/DecisionTech.ShoppingBasket.UnitTests/DecisionTech.ShoppingBasket.UnitTests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\DecisionTech.ShoppingBasket\DecisionTech.ShoppingBasket.csproj" />
+  </ItemGroup>
+
 </Project>
